--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,6 +6,8 @@
     },
     "dependencies": {
         "@fastify/cors": "^9.0.1",
+        "@fastify/swagger": "^8.14.0",
+        "@fastify/swagger-ui": "^4.0.0",
         "@prisma/client": "5.15.1",
         "@saas/auth": "workspace:*",
         "bcryptjs": "^2.4.3",
@@ -22,6 +24,9 @@
         "@types/node": "^20.14.5",
         "prisma": "^5.15.1",
         "tsx": "^4.15.6"
+    },
+    "prisma": {
+        "seed": "tsx prisma/seed.ts"
     },
     "prettier": "@saas/prettier",
     "eslintConfig": {
