--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,16 +2,23 @@
     "name": "@saas/api",
     "version": "0.0.0",
     "scripts": {
-        "dev": "tsx watch src/http/server.ts"
+        "dev": "pnpm env:load tsx watch src/http/server.ts",
+        "db:migrate": "pnpm env:load prisma migrate dev",
+        "db:studio": "pnpm env:load prisma studio",
+        "env:load": "dotenv -e ../../.env --"
     },
     "dependencies": {
         "@fastify/cors": "^9.0.1",
+        "@fastify/jwt": "^8.0.1",
         "@fastify/swagger": "^8.14.0",
         "@fastify/swagger-ui": "^4.0.0",
         "@prisma/client": "5.15.1",
         "@saas/auth": "workspace:*",
+        "@saas/env": "workspace:*",
         "bcryptjs": "^2.4.3",
+        "dotenv-cli": "^7.4.2",
         "fastify": "^4.28.0",
+        "fastify-plugin": "^4.5.1",
         "fastify-type-provider-zod": "^1.2.0",
         "zod": "^3.23.8"
     },
